--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     margin:0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .nav-bar{
     display: flex;
     align-items: center;
@@ -227,4 +231,68 @@ h1{
     flex-basis:200;
 }
 
+.fcontainer{
+    height: 80px;
+    width: 100%;
+    background: #151515;
+    display: flex;
+    align-items: center;
+    font-size: 0.85rem;
+}
 
+.ppp{
+    color: white;
+    margin-left: 70px;
+    margin-right: 25px;
+    
+}
+
+.ppp2{
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    margin-right: 10px;
+}
+.m1 a{
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.m1 i{
+    color: yellow;
+    margin-right: 10px;
+}
+
+.m2{
+    position: absolute;
+    left: 18%;
+}
+
+.m2 a{
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.m2 i{
+    color: yellow;
+    margin-right: 5px;
+}
+
+.and{
+    color: white;
+    font-size: 1.2rem;
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
+.ppp3{
+    color: white;
+    position: absolute;
+    left: 90%;
+    font-size: 0.95rem;
+}
+.ppp4{
+    color: white;
+    position: absolute;
+    left: 91.2%;
+}
